Overflow fix

--- a/src/assets/css/bee.css
+++ b/src/assets/css/bee.css
@@ -20,7 +20,7 @@
 }
 
 #bee {
-  bottom: 40%;
+  bottom: 40vh;
   position: absolute;
   animation: 10s linear infinite run;
 }
